Use clangd instead of IntelliSense

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,14 @@
 platform = teensy
 board = teensylc
 framework = arduino
+; help clangd find standard library headers
+build_flags =
+  -I$PROJECT_PACKAGES_DIR/toolchain-gccarmnoneeabi/arm-none-eabi/include/c++/9.3.1
+  -I$PROJECT_PACKAGES_DIR/toolchain-gccarmnoneeabi/arm-none-eabi/include/c++/9.3.1/arm-none-eabi
+  -I$PROJECT_PACKAGES_DIR/toolchain-gccarmnoneeabi/arm-none-eabi/include/c++/9.3.1/backward
+  -I$PROJECT_PACKAGES_DIR/toolchain-gccarmnoneeabi/lib/gcc/arm-none-eabi/9.3.1/include
+  -I$PROJECT_PACKAGES_DIR/toolchain-gccarmnoneeabi/lib/gcc/arm-none-eabi/9.3.1/include-fixed
+  -I$PROJECT_PACKAGES_DIR/toolchain-gccarmnoneeabi/arm-none-eabi/include
 
 # add compiler package, add teensy core with patches, override compiler commands
 [env:teensylc_clang]
@@ -20,6 +28,13 @@ platform = teensy
 board = teensylc
 framework = arduino
 extra_scripts = use_clang.py
+; help clangd find standard library headers; dump them e.g. with:
+; bin/clang++ -v -x c++ --config armv6m_soft_nofp_nosys -
+build_flags =
+    -I/home/ez/Downloads/toolchain-clang-linux_x86_64-1.130001.220312/lib/clang/13.0.0/include
+    -I/home/ez/Downloads/toolchain-clang-linux_x86_64-1.130001.220312/bin/../lib/clang-runtimes/armv6m_soft_nofp/include/c++/v1
+    -I/home/ez/Downloads/toolchain-clang-linux_x86_64-1.130001.220312/bin/../lib/clang-runtimes/armv6m_soft_nofp/include
+
 ; point toolchain-clang to where you downloaded the toolchain-clang package
 ; as linked in README.md
 platform_packages = 
